force-app/main/default/objects/SCH_Service_Appointment_Details__c/SCH_Service_Appointment_Details__c.object-meta.xml
<CustomObject>
    <description>object to save details from SA
reason of cancelation
reason of completed</description>
    <label>Detalhe Marcação</label>
    <nameField>
        <displayFormat>SSD-{0000000}</displayFormat>
        <label>Detalhes Marcação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalhes Marcação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>