force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_Google_ICS__c.field-meta.xml
<CustomField>
    <fullName>SCH_Google_ICS__c</fullName>
    <label>Google ICS</label>
    <type>Url</type>
</CustomField>