force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_MotivosConclusao__c.field-meta.xml
<CustomField>
    <fullName>SCH_MotivosConclusao__c</fullName>
    <label>Motivos de Conclusão</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compareceu</fullName>
            </value>
            <value>
                <fullName>Não Compareceu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>