force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_Observacoes__c.field-meta.xml
<CustomField>
    <fullName>SCH_Observacoes__c</fullName>
    <label>Observações</label>
    <type>TextArea</type>
</CustomField>