force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_ObservacoesCancelamento__c.field-meta.xml
<CustomField>
    <fullName>SCH_ObservacoesCancelamento__c</fullName>
    <label>Observações Cancelamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>