force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_OrigemMarcacao__c.field-meta.xml
<CustomField>
    <fullName>SCH_OrigemMarcacao__c</fullName>
    <label>Origem Marcação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Voz</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>