force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_RazaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>SCH_RazaoCancelamento__c</fullName>
    <label>Razão de Cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não tenho disponibilidade para esta data</fullName>
            </value>
            <value>
                <fullName>Optei por outro fornecedor</fullName>
            </value>
            <value>
                <fullName>Desisti de realizar o projeto</fullName>
            </value>
            <value>
                <fullName>Tenho vários agendamentos na LEROY MERLIN</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>