force-app/main/default/objects/SCH_Service_Appointment_Details__c/fields/SCH_ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>SCH_ServiceAppointment__c</fullName>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Service_Appointment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>