force-app/main/default/objects/SCH_Service_Appointment_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SCH_OrigemMarcacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>